2006-02-02  Justin Garcia  <justin.garcia@apple.com>

        Reviewed by darin, harrison
        
        <http://bugzilla.opendarwin.org/show_bug.cgi?id=6586>
        REGRESSION: visible_text.cpp assertion failure in Mail.app

        Calling range() on a WordIterator destroyed its RangeImpl, use
        RefPtr instead of PassRefPtr.
        Turned on continuous spell checking to test the fix, found
        a crasher caused by invalid positions created in
        previousBoundary.

        Added layout test:
        * editing/selection/end-of-document.html

        * khtml/editing/visible_text.h:
        * khtml/editing/visible_units.cpp:
        (khtml::previousBoundary):

2006-02-02  David Hyatt  <hyatt@apple.com>

        Vectorize Image.  Optimize so that we no longer throw away
        all CGImageRefs.  Now we just throw away the last frame.

        Reviewed by mjs

        * platform/mac/Image.mm:
        (WebCore::FrameData::m_duration):
        (WebCore::FrameData::~FrameData):
        (WebCore::FrameData::clear):
        (WebCore::ImageData::invalidateData):
        (WebCore::ImageData::cacheFrame):
        (WebCore::ImageData::frameAtIndex):
        (WebCore::ImageData::frameDurationAtIndex):

2006-01-31  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by mjs.

        Cleaned up some stuff I came across when working with JS enabled/
        disabled code:

        (1) Renamed initScript to initScriptIfNeeded, because that's what it
            does
        (2) Removed dead or otherwise irrelevent code
        (3) Fixed up comments
        (4) Removed NULL checks for interpreter() since it never returns NULL,
            replaced with single assert().

        No test case because there's no change in behavior.

        * khtml/ecma/kjs_proxy.cpp:
        (WebCore::KJSProxyImpl::evaluate): 1
        (WebCore::KJSProxyImpl::createHTMLEventHandler): 1
        (WebCore::KJSProxyImpl::createSVGEventHandler): 1